<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/tap_to_button"
        android:textSize="@dimen/text_size" />


    <Button
        android:id="@+id/button_en"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/topMargin"
        android:text="@string/button_en"
        android:textSize="@dimen/text_size" />

    <Button
        android:id="@+id/button_rus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/topMargin"
        android:text="@string/button_rus"
        android:textSize="@dimen/text_size" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@color/purple_500"
        android:layout_marginTop="@dimen/topMarginToTW"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/topMargin"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_set_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/set_fields"
            android:textSize="@dimen/text_size" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/topMarginToTW"
                android:gravity="center"
                android:hint="@string/name"
                android:textSize="@dimen/text_size" />

            <TextView
                android:id="@+id/surname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/topMarginToTW"
                android:gravity="center"
                android:hint="@string/surname"
                android:textSize="@dimen/text_size" />

            <TextView
                android:id="@+id/age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/topMarginToTW"
                android:gravity="center"
                android:hint="@string/age"
                android:textSize="@dimen/text_size" />

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/topMargin"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_copy_fields"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/copy_fields"
            android:textSize="@dimen/text_size" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/name_copy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/topMarginToTW"
                android:gravity="center"
                android:hint="@string/name"
                android:textSize="@dimen/text_size" />

            <TextView
                android:id="@+id/surname_copy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/topMarginToTW"
                android:gravity="center"
                android:hint="@string/surname"
                android:textSize="@dimen/text_size" />

        </LinearLayout>


    </LinearLayout>


</LinearLayout>